@@ -1,3 +1,10 @@
+2004-01-07  Vince Darley <vincentdarley@users.sourceforge.net>
+
+	* win/tkWinMenu.c: only provide a submenu handle when the
+	MF_POPUP flag is given, fixing a recently-introduced crash
+	when submenus are disabled.  Also better error checking for
+	this sort of situation in the future.
+	
 2003-12-31  Daniel Steffen  <das@users.sourceforge.net>
 
         * macosx/Wish.pbproj/project.pbxproj: added missing private headers
